# src/album/album.controller.ts
@@ -1,0 +1,53 @@
+import {
+  Controller,
+  Get,
+  Post,
+  Put,
+  Delete,
+  Body,
+  Param,
+  HttpCode,
+  HttpStatus,
+} from '@nestjs/common';
+import { ApiTags } from '@nestjs/swagger';
+import { AlbumService } from './services/album.service';
+import { CreateAlbumDto } from './dto/create-album.dto';
+import { UpdateAlbumDto } from './dto/update-album.dto';
+import { Album } from './entities/album.entity';
+import { UuidValidationPipe } from '../common/pipes/uuid-validation.pipe';
+
+@ApiTags('Album')
+@Controller('album')
+export class AlbumController {
+  constructor(private readonly albumService: AlbumService) {}
+
+  @Get()
+  async findAll(): Promise<Album[]> {
+    return this.albumService.findAll();
+  }
+
+  @Get(':id')
+  async findById(@Param('id', UuidValidationPipe) id: string): Promise<Album> {
+    return this.albumService.findById(id);
+  }
+
+  @Post()
+  @HttpCode(HttpStatus.CREATED)
+  async create(@Body() createAlbumDto: CreateAlbumDto): Promise<Album> {
+    return this.albumService.create(createAlbumDto);
+  }
+
+  @Put(':id')
+  async update(
+    @Param('id', UuidValidationPipe) id: string,
+    @Body() updateAlbumDto: UpdateAlbumDto,
+  ): Promise<Album> {
+    return this.albumService.update(id, updateAlbumDto);
+  }
+
+  @Delete(':id')
+  @HttpCode(HttpStatus.NO_CONTENT)
+  async delete(@Param('id', UuidValidationPipe) id: string): Promise<void> {
+    return this.albumService.delete(id);
+  }
+}
