# src/user/dto/create-user.dto.ts
@@ -1,0 +1,20 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+import { ApiProperty } from '@nestjs/swagger';
+
+export class CreateUserDto {
+  @ApiProperty({
+    description: "The user's login",
+    example: 'TestUser',
+  })
+  @IsNotEmpty()
+  @IsString()
+  login: string;
+
+  @ApiProperty({
+    description: "The user's password",
+    example: 'password123',
+  })
+  @IsNotEmpty()
+  @IsString()
+  password: string;
+}
